<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_title">Room Title</string>
    <string name="room_description">Room Description</string>
    <string name="add_room">Add Room</string>
    <string name="room_name">Room Name</string>
    <string name="your_message_here">Your Message Here</string>

    <array name="categories">
        <item>Sports</item>
        <item>Music</item>
        <item>Movies</item>
    </array>
</resources>